--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "aws-sdk": "^2.1581.0",
+    "@aws-sdk/client-s3": "^3.515.0",
+    "@aws-sdk/client-ses": "^3.533.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
