--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
