--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
+    "socket.io": "^4.7.5",
     "validator": "^13.11.0"
   }
 }
